# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_schema.RefreshTokenReq"
+                            "$ref": "#/definitions/schema.RefreshTokenReq"
                         }
                     }
                 ],
@@ -39,13 +39,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_base_handler.resp"
+                                    "$ref": "#/definitions/handler.resp"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_schema.TokenPairResp"
+                                            "$ref": "#/definitions/schema.TokenPairResp"
                                         }
                                     }
                                 }
@@ -75,7 +75,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_schema.CreateDraftReq"
+                            "$ref": "#/definitions/schema.CreateDraftReq"
                         }
                     }
                 ],
@@ -85,13 +85,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_base_handler.resp"
+                                    "$ref": "#/definitions/handler.resp"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_schema.CreateDraftResp"
+                                            "$ref": "#/definitions/schema.CreateDraftResp"
                                         }
                                     }
                                 }
@@ -128,7 +128,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_schema.UpdateDraftStatusReq"
+                            "$ref": "#/definitions/schema.UpdateDraftStatusReq"
                         }
                     }
                 ],
@@ -138,13 +138,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_base_handler.resp"
+                                    "$ref": "#/definitions/handler.resp"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_schema.UpdateDraftStatusResp"
+                                            "$ref": "#/definitions/schema.UpdateDraftStatusResp"
                                         }
                                     }
                                 }
@@ -174,7 +174,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_schema.SendEmailVerificationCodeReq"
+                            "$ref": "#/definitions/schema.SendEmailVerificationCodeReq"
                         }
                     }
                 ],
@@ -182,7 +182,7 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_base_handler.resp"
+                            "$ref": "#/definitions/handler.resp"
                         }
                     }
                 }
@@ -208,7 +208,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_schema.RegisterUserByEmailReq"
+                            "$ref": "#/definitions/schema.RegisterUserByEmailReq"
                         }
                     }
                 ],
@@ -218,13 +218,59 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_base_handler.resp"
+                                    "$ref": "#/definitions/handler.resp"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_schema.RegisterUserByEmailResp"
+                                            "$ref": "#/definitions/schema.RegisterUserByEmailResp"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/users/sessions/email": {
+            "post": {
+                "description": "使用邮箱和密码登录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "邮箱登录",
+                "parameters": [
+                    {
+                        "description": "Login By Email Request",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schema.LoginByEmailReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.resp"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/schema.LoginByEmailResp"
                                         }
                                     }
                                 }
@@ -236,7 +282,7 @@
         }
     },
     "definitions": {
-        "github_com_fntsky_ddl_guard_internal_base_handler.resp": {
+        "handler.resp": {
             "type": "object",
             "properties": {
                 "code": {
@@ -248,7 +294,7 @@
                 }
             }
         },
-        "github_com_fntsky_ddl_guard_internal_schema.CreateDraftInput": {
+        "schema.CreateDraftInput": {
             "type": "object",
             "properties": {
                 "deadline": {
@@ -270,7 +316,7 @@
                 }
             }
         },
-        "github_com_fntsky_ddl_guard_internal_schema.CreateDraftReq": {
+        "schema.CreateDraftReq": {
             "type": "object",
             "properties": {
                 "data_type": {
@@ -279,7 +325,7 @@
                     "example": "default"
                 },
                 "draft": {
-                    "$ref": "#/definitions/github_com_fntsky_ddl_guard_internal_schema.CreateDraftInput"
+                    "$ref": "#/definitions/schema.CreateDraftInput"
                 },
                 "raw_base64": {
                     "type": "string",
@@ -287,7 +333,7 @@
                 }
             }
         },
-        "github_com_fntsky_ddl_guard_internal_schema.CreateDraftResp": {
+        "schema.CreateDraftResp": {
             "type": "object",
             "properties": {
                 "deadline": {
@@ -313,7 +359,45 @@
                 }
             }
         },
-        "github_com_fntsky_ddl_guard_internal_schema.RefreshTokenReq": {
+        "schema.LoginByEmailReq": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "testuser@example.com"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "password123"
+                }
+            }
+        },
+        "schema.LoginByEmailResp": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+                },
+                "refresh_token": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+                },
+                "username": {
+                    "type": "string",
+                    "example": "testuser"
+                },
+                "uuid": {
+                    "type": "string",
+                    "example": "7a178766-4b8e-4e99-ab4c-843f7dbd95fd"
+                }
+            }
+        },
+        "schema.RefreshTokenReq": {
             "type": "object",
             "required": [
                 "refresh_token"
@@ -324,7 +408,7 @@
                 }
             }
         },
-        "github_com_fntsky_ddl_guard_internal_schema.RegisterUserByEmailReq": {
+        "schema.RegisterUserByEmailReq": {
             "type": "object",
             "required": [
                 "code",
@@ -352,7 +436,7 @@
                 }
             }
         },
-        "github_com_fntsky_ddl_guard_internal_schema.RegisterUserByEmailResp": {
+        "schema.RegisterUserByEmailResp": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -369,7 +453,7 @@
                 }
             }
         },
-        "github_com_fntsky_ddl_guard_internal_schema.SendEmailVerificationCodeReq": {
+        "schema.SendEmailVerificationCodeReq": {
             "type": "object",
             "required": [
                 "email"
@@ -381,7 +465,7 @@
                 }
             }
         },
-        "github_com_fntsky_ddl_guard_internal_schema.TokenPairResp": {
+        "schema.TokenPairResp": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -394,7 +478,7 @@
                 }
             }
         },
-        "github_com_fntsky_ddl_guard_internal_schema.UpdateDraftStatusReq": {
+        "schema.UpdateDraftStatusReq": {
             "type": "object",
             "required": [
                 "status"
@@ -406,7 +490,7 @@
                 }
             }
         },
-        "github_com_fntsky_ddl_guard_internal_schema.UpdateDraftStatusResp": {
+        "schema.UpdateDraftStatusResp": {
             "type": "object",
             "properties": {
                 "status": {
